parser/y.output

state 0
	$accept: .file $end 
	file: .    (4)

	$end  reduce 4 (src line 155)
	error  shift 14
	_SYNTAX  shift 4
	_IMPORT  shift 15
	_PACKAGE  shift 16
	_OPTION  shift 17
	_ENUM  shift 19
	_MESSAGE  shift 18
	_EXTEND  shift 20
	_SERVICE  shift 21
	';'  shift 13
	.  error

	file  goto 1
	syntax  goto 2
	fileDecl  goto 5
	fileDecls  goto 3
	import  goto 6
	package  goto 7
	option  goto 8
	message  goto 9
	enum  goto 10
	extend  goto 11
	service  goto 12

state 1
	$accept:  file.$end 

	$end  accept
	.  error


state 2
	file:  syntax.    (1)
	file:  syntax.fileDecls 

	$end  reduce 1 (src line 143)
	error  shift 14
	_IMPORT  shift 15
	_PACKAGE  shift 16
	_OPTION  shift 17
	_ENUM  shift 19
	_MESSAGE  shift 18
	_EXTEND  shift 20
	_SERVICE  shift 21
	';'  shift 13
	.  error

	fileDecl  goto 5
	fileDecls  goto 22
	import  goto 6
	package  goto 7
	option  goto 8
	message  goto 9
	enum  goto 10
	extend  goto 11
	service  goto 12

state 3
	file:  fileDecls.    (2)
	fileDecls:  fileDecls.fileDecl 

	$end  reduce 2 (src line 147)
	error  shift 14
	_IMPORT  shift 15
	_PACKAGE  shift 16
	_OPTION  shift 17
	_ENUM  shift 19
	_MESSAGE  shift 18
	_EXTEND  shift 20
	_SERVICE  shift 21
	';'  shift 13
	.  error

	fileDecl  goto 23
	import  goto 6
	package  goto 7
	option  goto 8
	message  goto 9
	enum  goto 10
	extend  goto 11
	service  goto 12

state 4
	syntax:  _SYNTAX.'=' stringLit ';' 

	'='  shift 24
	.  error


state 5
	fileDecls:  fileDecl.    (6)

	.  reduce 6 (src line 165)


state 6
	fileDecl:  import.    (7)

	.  reduce 7 (src line 173)


state 7
	fileDecl:  package.    (8)

	.  reduce 8 (src line 176)


state 8
	fileDecl:  option.    (9)

	.  reduce 9 (src line 179)


state 9
	fileDecl:  message.    (10)

	.  reduce 10 (src line 182)


state 10
	fileDecl:  enum.    (11)

	.  reduce 11 (src line 185)


state 11
	fileDecl:  extend.    (12)

	.  reduce 12 (src line 188)


state 12
	fileDecl:  service.    (13)

	.  reduce 13 (src line 191)


state 13
	fileDecl:  ';'.    (14)

	.  reduce 14 (src line 194)


14: shift/reduce conflict (shift 25(0), red'n 16(0)) on ';'
state 14
	fileDecl:  error.';' 
	fileDecl:  error.    (16)

	';'  shift 25
	.  reduce 16 (src line 200)


state 15
	import:  _IMPORT.stringLit ';' 
	import:  _IMPORT._WEAK stringLit ';' 
	import:  _IMPORT._PUBLIC stringLit ';' 

	_STRING_LIT  shift 29
	_WEAK  shift 27
	_PUBLIC  shift 28
	.  error

	stringLit  goto 26

state 16
	package:  _PACKAGE.ident ';' 

	_NAME  shift 32
	_SYNTAX  shift 33
	_IMPORT  shift 34
	_WEAK  shift 35
	_PUBLIC  shift 36
	_PACKAGE  shift 37
	_OPTION  shift 38
	_TRUE  shift 39
	_FALSE  shift 40
	_INF  shift 41
	_NAN  shift 42
	_REPEATED  shift 43
	_OPTIONAL  shift 44
	_REQUIRED  shift 45
	_DOUBLE  shift 46
	_FLOAT  shift 47
	_INT32  shift 48
	_INT64  shift 49
	_UINT32  shift 50
	_UINT64  shift 51
	_SINT32  shift 52
	_SINT64  shift 53
	_FIXED32  shift 54
	_FIXED64  shift 55
	_SFIXED32  shift 56
	_SFIXED64  shift 57
	_BOOL  shift 58
	_STRING  shift 59
	_BYTES  shift 60
	_GROUP  shift 61
	_ONEOF  shift 62
	_MAP  shift 63
	_EXTENSIONS  shift 64
	_TO  shift 65
	_MAX  shift 66
	_RESERVED  shift 67
	_ENUM  shift 68
	_MESSAGE  shift 69
	_EXTEND  shift 70
	_SERVICE  shift 71
	_RPC  shift 72
	_STREAM  shift 73
	_RETURNS  shift 74
	.  error

	name  goto 31
	ident  goto 30

state 17
	option:  _OPTION.optionName '=' constant ';' 

	_NAME  shift 32
	_SYNTAX  shift 33
	_IMPORT  shift 34
	_WEAK  shift 35
	_PUBLIC  shift 36
	_PACKAGE  shift 37
	_OPTION  shift 38
	_TRUE  shift 39
	_FALSE  shift 40
	_INF  shift 41
	_NAN  shift 42
	_REPEATED  shift 43
	_OPTIONAL  shift 44
	_REQUIRED  shift 45
	_DOUBLE  shift 46
	_FLOAT  shift 47
	_INT32  shift 48
	_INT64  shift 49
	_UINT32  shift 50
	_UINT64  shift 51
	_SINT32  shift 52
	_SINT64  shift 53
	_FIXED32  shift 54
	_FIXED64  shift 55
	_SFIXED32  shift 56
	_SFIXED64  shift 57
	_BOOL  shift 58
	_STRING  shift 59
	_BYTES  shift 60
	_GROUP  shift 61
	_ONEOF  shift 62
	_MAP  shift 63
	_EXTENSIONS  shift 64
	_TO  shift 65
	_MAX  shift 66
	_RESERVED  shift 67
	_ENUM  shift 68
	_MESSAGE  shift 69
	_EXTEND  shift 70
	_SERVICE  shift 71
	_RPC  shift 72
	_STREAM  shift 73
	_RETURNS  shift 74
	'('  shift 78
	.  error

	optionNameComponent  goto 76
	optionName  goto 75
	name  goto 77

state 18
	message:  _MESSAGE.name '{' messageDecls '}' 

	_NAME  shift 32
	_SYNTAX  shift 33
	_IMPORT  shift 34
	_WEAK  shift 35
	_PUBLIC  shift 36
	_PACKAGE  shift 37
	_OPTION  shift 38
	_TRUE  shift 39
	_FALSE  shift 40
	_INF  shift 41
	_NAN  shift 42
	_REPEATED  shift 43
	_OPTIONAL  shift 44
	_REQUIRED  shift 45
	_DOUBLE  shift 46
	_FLOAT  shift 47
	_INT32  shift 48
	_INT64  shift 49
	_UINT32  shift 50
	_UINT64  shift 51
	_SINT32  shift 52
	_SINT64  shift 53
	_FIXED32  shift 54
	_FIXED64  shift 55
	_SFIXED32  shift 56
	_SFIXED64  shift 57
	_BOOL  shift 58
	_STRING  shift 59
	_BYTES  shift 60
	_GROUP  shift 61
	_ONEOF  shift 62
	_MAP  shift 63
	_EXTENSIONS  shift 64
	_TO  shift 65
	_MAX  shift 66
	_RESERVED  shift 67
	_ENUM  shift 68
	_MESSAGE  shift 69
	_EXTEND  shift 70
	_SERVICE  shift 71
	_RPC  shift 72
	_STREAM  shift 73
	_RETURNS  shift 74
	.  error

	name  goto 79

state 19
	enum:  _ENUM.name '{' enumDecls '}' 

	_NAME  shift 32
	_SYNTAX  shift 33
	_IMPORT  shift 34
	_WEAK  shift 35
	_PUBLIC  shift 36
	_PACKAGE  shift 37
	_OPTION  shift 38
	_TRUE  shift 39
	_FALSE  shift 40
	_INF  shift 41
	_NAN  shift 42
	_REPEATED  shift 43
	_OPTIONAL  shift 44
	_REQUIRED  shift 45
	_DOUBLE  shift 46
	_FLOAT  shift 47
	_INT32  shift 48
	_INT64  shift 49
	_UINT32  shift 50
	_UINT64  shift 51
	_SINT32  shift 52
	_SINT64  shift 53
	_FIXED32  shift 54
	_FIXED64  shift 55
	_SFIXED32  shift 56
	_SFIXED64  shift 57
	_BOOL  shift 58
	_STRING  shift 59
	_BYTES  shift 60
	_GROUP  shift 61
	_ONEOF  shift 62
	_MAP  shift 63
	_EXTENSIONS  shift 64
	_TO  shift 65
	_MAX  shift 66
	_RESERVED  shift 67
	_ENUM  shift 68
	_MESSAGE  shift 69
	_EXTEND  shift 70
	_SERVICE  shift 71
	_RPC  shift 72
	_STREAM  shift 73
	_RETURNS  shift 74
	.  error

	name  goto 80

state 20
	extend:  _EXTEND.typeIdent '{' extendDecls '}' 

	_NAME  shift 32
	_SYNTAX  shift 33
	_IMPORT  shift 34
	_WEAK  shift 35
	_PUBLIC  shift 36
	_PACKAGE  shift 37
	_OPTION  shift 38
	_TRUE  shift 39
	_FALSE  shift 40
	_INF  shift 41
	_NAN  shift 42
	_REPEATED  shift 43
	_OPTIONAL  shift 44
	_REQUIRED  shift 45
	_DOUBLE  shift 46
	_FLOAT  shift 47
	_INT32  shift 48
	_INT64  shift 49
	_UINT32  shift 50
	_UINT64  shift 51
	_SINT32  shift 52
	_SINT64  shift 53
	_FIXED32  shift 54
	_FIXED64  shift 55
	_SFIXED32  shift 56
	_SFIXED64  shift 57
	_BOOL  shift 58
	_STRING  shift 59
	_BYTES  shift 60
	_GROUP  shift 61
	_ONEOF  shift 62
	_MAP  shift 63
	_EXTENSIONS  shift 64
	_TO  shift 65
	_MAX  shift 66
	_RESERVED  shift 67
	_ENUM  shift 68
	_MESSAGE  shift 69
	_EXTEND  shift 70
	_SERVICE  shift 71
	_RPC  shift 72
	_STREAM  shift 73
	_RETURNS  shift 74
	'.'  shift 83
	.  error

	name  goto 31
	ident  goto 82
	typeIdent  goto 81

state 21
	service:  _SERVICE.name '{' serviceDecls '}' 

	_NAME  shift 32
	_SYNTAX  shift 33
	_IMPORT  shift 34
	_WEAK  shift 35
	_PUBLIC  shift 36
	_PACKAGE  shift 37
	_OPTION  shift 38
	_TRUE  shift 39
	_FALSE  shift 40
	_INF  shift 41
	_NAN  shift 42
	_REPEATED  shift 43
	_OPTIONAL  shift 44
	_REQUIRED  shift 45
	_DOUBLE  shift 46
	_FLOAT  shift 47
	_INT32  shift 48
	_INT64  shift 49
	_UINT32  shift 50
	_UINT64  shift 51
	_SINT32  shift 52
	_SINT64  shift 53
	_FIXED32  shift 54
	_FIXED64  shift 55
	_SFIXED32  shift 56
	_SFIXED64  shift 57
	_BOOL  shift 58
	_STRING  shift 59
	_BYTES  shift 60
	_GROUP  shift 61
	_ONEOF  shift 62
	_MAP  shift 63
	_EXTENSIONS  shift 64
	_TO  shift 65
	_MAX  shift 66
	_RESERVED  shift 67
	_ENUM  shift 68
	_MESSAGE  shift 69
	_EXTEND  shift 70
	_SERVICE  shift 71
	_RPC  shift 72
	_STREAM  shift 73
	_RETURNS  shift 74
	.  error

	name  goto 84

state 22
	file:  syntax fileDecls.    (3)
	fileDecls:  fileDecls.fileDecl 

	$end  reduce 3 (src line 151)
	error  shift 14
	_IMPORT  shift 15
	_PACKAGE  shift 16
	_OPTION  shift 17
	_ENUM  shift 19
	_MESSAGE  shift 18
	_EXTEND  shift 20
	_SERVICE  shift 21
	';'  shift 13
	.  error

	fileDecl  goto 23
	import  goto 6
	package  goto 7
	option  goto 8
	message  goto 9
	enum  goto 10
	extend  goto 11
	service  goto 12

state 23
	fileDecls:  fileDecls fileDecl.    (5)

	.  reduce 5 (src line 158)


state 24
	syntax:  _SYNTAX '='.stringLit ';' 

	_STRING_LIT  shift 29
	.  error

	stringLit  goto 85

state 25
	fileDecl:  error ';'.    (15)

	.  reduce 15 (src line 197)


state 26
	import:  _IMPORT stringLit.';' 

	';'  shift 86
	.  error


state 27
	import:  _IMPORT _WEAK.stringLit ';' 

	_STRING_LIT  shift 29
	.  error

	stringLit  goto 87

state 28
	import:  _IMPORT _PUBLIC.stringLit ';' 

	_STRING_LIT  shift 29
	.  error

	stringLit  goto 88

state 29
	stringLit:  _STRING_LIT.    (42)
	stringLit:  _STRING_LIT.stringLit 

	_STRING_LIT  shift 29
	.  reduce 42 (src line 298)

	stringLit  goto 89

state 30
	package:  _PACKAGE ident.';' 

	';'  shift 90
	.  error


state 31
	ident:  name.    (22)
	ident:  name.'.' ident 

	'.'  shift 91
	.  reduce 22 (src line 222)


state 32
	name:  _NAME.    (201)

	.  reduce 201 (src line 914)


state 33
	name:  _SYNTAX.    (202)

	.  reduce 202 (src line 915)


state 34
	name:  _IMPORT.    (203)

	.  reduce 203 (src line 916)


state 35
	name:  _WEAK.    (204)

	.  reduce 204 (src line 917)


state 36
	name:  _PUBLIC.    (205)

	.  reduce 205 (src line 918)


state 37
	name:  _PACKAGE.    (206)

	.  reduce 206 (src line 919)


state 38
	name:  _OPTION.    (207)

	.  reduce 207 (src line 920)


state 39
	name:  _TRUE.    (208)

	.  reduce 208 (src line 921)


state 40
	name:  _FALSE.    (209)

	.  reduce 209 (src line 922)


state 41
	name:  _INF.    (210)

	.  reduce 210 (src line 923)


state 42
	name:  _NAN.    (211)

	.  reduce 211 (src line 924)


state 43
	name:  _REPEATED.    (212)

	.  reduce 212 (src line 925)


state 44
	name:  _OPTIONAL.    (213)

	.  reduce 213 (src line 926)


state 45
	name:  _REQUIRED.    (214)

	.  reduce 214 (src line 927)


state 46
	name:  _DOUBLE.    (215)

	.  reduce 215 (src line 928)


state 47
	name:  _FLOAT.    (216)

	.  reduce 216 (src line 929)


state 48
	name:  _INT32.    (217)

	.  reduce 217 (src line 930)


state 49
	name:  _INT64.    (218)

	.  reduce 218 (src line 931)


state 50
	name:  _UINT32.    (219)

	.  reduce 219 (src line 932)


state 51
	name:  _UINT64.    (220)

	.  reduce 220 (src line 933)


state 52
	name:  _SINT32.    (221)

	.  reduce 221 (src line 934)


state 53
	name:  _SINT64.    (222)

	.  reduce 222 (src line 935)


state 54
	name:  _FIXED32.    (223)

	.  reduce 223 (src line 936)


state 55
	name:  _FIXED64.    (224)

	.  reduce 224 (src line 937)


state 56
	name:  _SFIXED32.    (225)

	.  reduce 225 (src line 938)


state 57
	name:  _SFIXED64.    (226)

	.  reduce 226 (src line 939)


state 58
	name:  _BOOL.    (227)

	.  reduce 227 (src line 940)


state 59
	name:  _STRING.    (228)

	.  reduce 228 (src line 941)


state 60
	name:  _BYTES.    (229)

	.  reduce 229 (src line 942)


state 61
	name:  _GROUP.    (230)

	.  reduce 230 (src line 943)


state 62
	name:  _ONEOF.    (231)

	.  reduce 231 (src line 944)


state 63
	name:  _MAP.    (232)

	.  reduce 232 (src line 945)


state 64
	name:  _EXTENSIONS.    (233)

	.  reduce 233 (src line 946)


state 65
	name:  _TO.    (234)

	.  reduce 234 (src line 947)


state 66
	name:  _MAX.    (235)

	.  reduce 235 (src line 948)


state 67
	name:  _RESERVED.    (236)

	.  reduce 236 (src line 949)


state 68
	name:  _ENUM.    (237)

	.  reduce 237 (src line 950)


state 69
	name:  _MESSAGE.    (238)

	.  reduce 238 (src line 951)


state 70
	name:  _EXTEND.    (239)

	.  reduce 239 (src line 952)


state 71
	name:  _SERVICE.    (240)

	.  reduce 240 (src line 953)


state 72
	name:  _RPC.    (241)

	.  reduce 241 (src line 954)


state 73
	name:  _STREAM.    (242)

	.  reduce 242 (src line 955)


state 74
	name:  _RETURNS.    (243)

	.  reduce 243 (src line 956)


state 75
	option:  _OPTION optionName.'=' constant ';' 

	'='  shift 92
	.  error


state 76
	optionName:  optionNameComponent.    (25)
	optionName:  optionNameComponent.'.' optionName 

	'.'  shift 93
	.  reduce 25 (src line 235)


state 77
	optionNameComponent:  name.    (27)

	.  reduce 27 (src line 242)


state 78
	optionNameComponent:  '('.typeIdent ')' 

	_NAME  shift 32
	_SYNTAX  shift 33
	_IMPORT  shift 34
	_WEAK  shift 35
	_PUBLIC  shift 36
	_PACKAGE  shift 37
	_OPTION  shift 38
	_TRUE  shift 39
	_FALSE  shift 40
	_INF  shift 41
	_NAN  shift 42
	_REPEATED  shift 43
	_OPTIONAL  shift 44
	_REQUIRED  shift 45
	_DOUBLE  shift 46
	_FLOAT  shift 47
	_INT32  shift 48
	_INT64  shift 49
	_UINT32  shift 50
	_UINT64  shift 51
	_SINT32  shift 52
	_SINT64  shift 53
	_FIXED32  shift 54
	_FIXED64  shift 55
	_SFIXED32  shift 56
	_SFIXED64  shift 57
	_BOOL  shift 58
	_STRING  shift 59
	_BYTES  shift 60
	_GROUP  shift 61
	_ONEOF  shift 62
	_MAP  shift 63
	_EXTENSIONS  shift 64
	_TO  shift 65
	_MAX  shift 66
	_RESERVED  shift 67
	_ENUM  shift 68
	_MESSAGE  shift 69
	_EXTEND  shift 70
	_SERVICE  shift 71
	_RPC  shift 72
	_STREAM  shift 73
	_RETURNS  shift 74
	'.'  shift 83
	.  error

	name  goto 31
	ident  goto 82
	typeIdent  goto 94

state 79
	message:  _MESSAGE name.'{' messageDecls '}' 

	'{'  shift 95
	.  error


state 80
	enum:  _ENUM name.'{' enumDecls '}' 

	'{'  shift 96
	.  error


state 81
	extend:  _EXTEND typeIdent.'{' extendDecls '}' 

	'{'  shift 97
	.  error


state 82
	typeIdent:  ident.    (73)

	.  reduce 73 (src line 458)


state 83
	typeIdent:  '.'.ident 

	_NAME  shift 32
	_SYNTAX  shift 33
	_IMPORT  shift 34
	_WEAK  shift 35
	_PUBLIC  shift 36
	_PACKAGE  shift 37
	_OPTION  shift 38
	_TRUE  shift 39
	_FALSE  shift 40
	_INF  shift 41
	_NAN  shift 42
	_REPEATED  shift 43
	_OPTIONAL  shift 44
	_REQUIRED  shift 45
	_DOUBLE  shift 46
	_FLOAT  shift 47
	_INT32  shift 48
	_INT64  shift 49
	_UINT32  shift 50
	_UINT64  shift 51
	_SINT32  shift 52
	_SINT64  shift 53
	_FIXED32  shift 54
	_FIXED64  shift 55
	_SFIXED32  shift 56
	_SFIXED64  shift 57
	_BOOL  shift 58
	_STRING  shift 59
	_BYTES  shift 60
	_GROUP  shift 61
	_ONEOF  shift 62
	_MAP  shift 63
	_EXTENSIONS  shift 64
	_TO  shift 65
	_MAX  shift 66
	_RESERVED  shift 67
	_ENUM  shift 68
	_MESSAGE  shift 69
	_EXTEND  shift 70
	_SERVICE  shift 71
	_RPC  shift 72
	_STREAM  shift 73
	_RETURNS  shift 74
	.  error

	name  goto 31
	ident  goto 98

state 84
	service:  _SERVICE name.'{' serviceDecls '}' 

	'{'  shift 99
	.  error


state 85
	syntax:  _SYNTAX '=' stringLit.';' 

	';'  shift 100
	.  error


state 86
	import:  _IMPORT stringLit ';'.    (18)

	.  reduce 18 (src line 208)


state 87
	import:  _IMPORT _WEAK stringLit.';' 

	';'  shift 101
	.  error


state 88
	import:  _IMPORT _PUBLIC stringLit.';' 

	';'  shift 102
	.  error


state 89
	stringLit:  _STRING_LIT stringLit.    (43)

	.  reduce 43 (src line 301)


state 90
	package:  _PACKAGE ident ';'.    (21)

	.  reduce 21 (src line 218)


state 91
	ident:  name '.'.ident 

	_NAME  shift 32
	_SYNTAX  shift 33
	_IMPORT  shift 34
	_WEAK  shift 35
	_PUBLIC  shift 36
	_PACKAGE  shift 37
	_OPTION  shift 38
	_TRUE  shift 39
	_FALSE  shift 40
	_INF  shift 41
	_NAN  shift 42
	_REPEATED  shift 43
	_OPTIONAL  shift 44
	_REQUIRED  shift 45
	_DOUBLE  shift 46
	_FLOAT  shift 47
	_INT32  shift 48
	_INT64  shift 49
	_UINT32  shift 50
	_UINT64  shift 51
	_SINT32  shift 52
	_SINT64  shift 53
	_FIXED32  shift 54
	_FIXED64  shift 55
	_SFIXED32  shift 56
	_SFIXED64  shift 57
	_BOOL  shift 58
	_STRING  shift 59
	_BYTES  shift 60
	_GROUP  shift 61
	_ONEOF  shift 62
	_MAP  shift 63
	_EXTENSIONS  shift 64
	_TO  shift 65
	_MAX  shift 66
	_RESERVED  shift 67
	_ENUM  shift 68
	_MESSAGE  shift 69
	_EXTEND  shift 70
	_SERVICE  shift 71
	_RPC  shift 72
	_STREAM  shift 73
	_RETURNS  shift 74
	.  error

	name  goto 31
	ident  goto 103

state 92
	option:  _OPTION optionName '='.constant ';' 

	_STRING_LIT  shift 29
	_INT_LIT  shift 114
	_FLOAT_LIT  shift 111
	_NAME  shift 32
	_SYNTAX  shift 33
	_IMPORT  shift 34
	_WEAK  shift 35
	_PUBLIC  shift 36
	_PACKAGE  shift 37
	_OPTION  shift 38
	_TRUE  shift 39
	_FALSE  shift 40
	_INF  shift 41
	_NAN  shift 42
	_REPEATED  shift 43
	_OPTIONAL  shift 44
	_REQUIRED  shift 45
	_DOUBLE  shift 46
	_FLOAT  shift 47
	_INT32  shift 48
	_INT64  shift 49
	_UINT32  shift 50
	_UINT64  shift 51
	_SINT32  shift 52
	_SINT64  shift 53
	_FIXED32  shift 54
	_FIXED64  shift 55
	_SFIXED32  shift 56
	_SFIXED64  shift 57
	_BOOL  shift 58
	_STRING  shift 59
	_BYTES  shift 60
	_GROUP  shift 61
	_ONEOF  shift 62
	_MAP  shift 63
	_EXTENSIONS  shift 64
	_TO  shift 65
	_MAX  shift 66
	_RESERVED  shift 67
	_ENUM  shift 68
	_MESSAGE  shift 69
	_EXTEND  shift 70
	_SERVICE  shift 71
	_RPC  shift 72
	_STREAM  shift 73
	_RETURNS  shift 74
	'{'  shift 110
	'+'  shift 113
	'-'  shift 112
	.  error

	constant  goto 104
	scalarConstant  goto 105
	aggregate  goto 106
	numLit  goto 108
	name  goto 109
	stringLit  goto 107

state 93
	optionName:  optionNameComponent '.'.optionName 

	_NAME  shift 32
	_SYNTAX  shift 33
	_IMPORT  shift 34
	_WEAK  shift 35
	_PUBLIC  shift 36
	_PACKAGE  shift 37
	_OPTION  shift 38
	_TRUE  shift 39
	_FALSE  shift 40
	_INF  shift 41
	_NAN  shift 42
	_REPEATED  shift 43
	_OPTIONAL  shift 44
	_REQUIRED  shift 45
	_DOUBLE  shift 46
	_FLOAT  shift 47
	_INT32  shift 48
	_INT64  shift 49
	_UINT32  shift 50
	_UINT64  shift 51
	_SINT32  shift 52
	_SINT64  shift 53
	_FIXED32  shift 54
	_FIXED64  shift 55
	_SFIXED32  shift 56
	_SFIXED64  shift 57
	_BOOL  shift 58
	_STRING  shift 59
	_BYTES  shift 60
	_GROUP  shift 61
	_ONEOF  shift 62
	_MAP  shift 63
	_EXTENSIONS  shift 64
	_TO  shift 65
	_MAX  shift 66
	_RESERVED  shift 67
	_ENUM  shift 68
	_MESSAGE  shift 69
	_EXTEND  shift 70
	_SERVICE  shift 71
	_RPC  shift 72
	_STREAM  shift 73
	_RETURNS  shift 74
	'('  shift 78
	.  error

	optionNameComponent  goto 76
	optionName  goto 115
	name  goto 77

state 94
	optionNameComponent:  '(' typeIdent.')' 

	')'  shift 116
	.  error


95: shift/reduce conflict (shift 130(0), red'n 158(0)) on error
95: shift/reduce conflict (shift 32(0), red'n 158(0)) on _NAME
95: shift/reduce conflict (shift 33(0), red'n 158(0)) on _SYNTAX
95: shift/reduce conflict (shift 34(0), red'n 158(0)) on _IMPORT
95: shift/reduce conflict (shift 35(0), red'n 158(0)) on _WEAK
95: shift/reduce conflict (shift 36(0), red'n 158(0)) on _PUBLIC
95: shift/reduce conflict (shift 37(0), red'n 158(0)) on _PACKAGE
95: shift/reduce conflict (shift 139(0), red'n 158(0)) on _OPTION
95: shift/reduce conflict (shift 39(0), red'n 158(0)) on _TRUE
95: shift/reduce conflict (shift 40(0), red'n 158(0)) on _FALSE
95: shift/reduce conflict (shift 41(0), red'n 158(0)) on _INF
95: shift/reduce conflict (shift 42(0), red'n 158(0)) on _NAN
95: shift/reduce conflict (shift 133(0), red'n 158(0)) on _REPEATED
95: shift/reduce conflict (shift 132(0), red'n 158(0)) on _OPTIONAL
95: shift/reduce conflict (shift 131(0), red'n 158(0)) on _REQUIRED
95: shift/reduce conflict (shift 46(0), red'n 158(0)) on _DOUBLE
95: shift/reduce conflict (shift 47(0), red'n 158(0)) on _FLOAT
95: shift/reduce conflict (shift 48(0), red'n 158(0)) on _INT32
95: shift/reduce conflict (shift 49(0), red'n 158(0)) on _INT64
95: shift/reduce conflict (shift 50(0), red'n 158(0)) on _UINT32
95: shift/reduce conflict (shift 51(0), red'n 158(0)) on _UINT64
95: shift/reduce conflict (shift 52(0), red'n 158(0)) on _SINT32
95: shift/reduce conflict (shift 53(0), red'n 158(0)) on _SINT64
95: shift/reduce conflict (shift 54(0), red'n 158(0)) on _FIXED32
95: shift/reduce conflict (shift 55(0), red'n 158(0)) on _FIXED64
95: shift/reduce conflict (shift 56(0), red'n 158(0)) on _SFIXED32
95: shift/reduce conflict (shift 57(0), red'n 158(0)) on _SFIXED64
95: shift/reduce conflict (shift 58(0), red'n 158(0)) on _BOOL
95: shift/reduce conflict (shift 59(0), red'n 158(0)) on _STRING
95: shift/reduce conflict (shift 60(0), red'n 158(0)) on _BYTES
95: shift/reduce conflict (shift 61(0), red'n 158(0)) on _GROUP
95: shift/reduce conflict (shift 140(0), red'n 158(0)) on _ONEOF
95: shift/reduce conflict (shift 144(0), red'n 158(0)) on _MAP
95: shift/reduce conflict (shift 138(0), red'n 158(0)) on _EXTENSIONS
95: shift/reduce conflict (shift 65(0), red'n 158(0)) on _TO
95: shift/reduce conflict (shift 66(0), red'n 158(0)) on _MAX
95: shift/reduce conflict (shift 142(0), red'n 158(0)) on _RESERVED
95: shift/reduce conflict (shift 135(0), red'n 158(0)) on _ENUM
95: shift/reduce conflict (shift 136(0), red'n 158(0)) on _MESSAGE
95: shift/reduce conflict (shift 137(0), red'n 158(0)) on _EXTEND
95: shift/reduce conflict (shift 71(0), red'n 158(0)) on _SERVICE
95: shift/reduce conflict (shift 72(0), red'n 158(0)) on _RPC
95: shift/reduce conflict (shift 73(0), red'n 158(0)) on _STREAM
95: shift/reduce conflict (shift 74(0), red'n 158(0)) on _RETURNS
95: shift/reduce conflict (shift 129(0), red'n 158(0)) on ';'
95: shift/reduce conflict (shift 83(0), red'n 158(0)) on '.'
state 95
	message:  _MESSAGE name '{'.messageDecls '}' 
	messageDecls: .    (158)

	error  shift 130
	_NAME  shift 32
	_SYNTAX  shift 33
	_IMPORT  shift 34
	_WEAK  shift 35
	_PUBLIC  shift 36
	_PACKAGE  shift 37
	_OPTION  shift 139
	_TRUE  shift 39
	_FALSE  shift 40
	_INF  shift 41
	_NAN  shift 42
	_REPEATED  shift 133
	_OPTIONAL  shift 132
	_REQUIRED  shift 131
	_DOUBLE  shift 46
	_FLOAT  shift 47
	_INT32  shift 48
	_INT64  shift 49
	_UINT32  shift 50
	_UINT64  shift 51
	_SINT32  shift 52
	_SINT64  shift 53
	_FIXED32  shift 54
	_FIXED64  shift 55
	_SFIXED32  shift 56
	_SFIXED64  shift 57
	_BOOL  shift 58
	_STRING  shift 59
	_BYTES  shift 60
	_GROUP  shift 61
	_ONEOF  shift 140
	_MAP  shift 144
	_EXTENSIONS  shift 138
	_TO  shift 65
	_MAX  shift 66
	_RESERVED  shift 142
	_ENUM  shift 135
	_MESSAGE  shift 136
	_EXTEND  shift 137
	_SERVICE  shift 71
	_RPC  shift 72
	_STREAM  shift 73
	_RETURNS  shift 74
	';'  shift 129
	'}'  reduce 158 (src line 746)
	'.'  shift 83
	.  error

	option  goto 125
	name  goto 31
	ident  goto 82
	typeIdent  goto 134
	field  goto 119
	oneof  goto 126
	group  goto 124
	mapField  goto 127
	mapType  goto 141
	message  goto 121
	messageDecl  goto 118
	messageDecls  goto 117
	msgReserved  goto 128
	reservedNames  goto 143
	extensions  goto 123
	enum  goto 120
	extend  goto 122

96: shift/reduce conflict (shift 151(0), red'n 146(0)) on error
96: shift/reduce conflict (shift 32(0), red'n 146(0)) on _NAME
96: shift/reduce conflict (shift 33(0), red'n 146(0)) on _SYNTAX
96: shift/reduce conflict (shift 34(0), red'n 146(0)) on _IMPORT
96: shift/reduce conflict (shift 35(0), red'n 146(0)) on _WEAK
96: shift/reduce conflict (shift 36(0), red'n 146(0)) on _PUBLIC
96: shift/reduce conflict (shift 37(0), red'n 146(0)) on _PACKAGE
96: shift/reduce conflict (shift 139(0), red'n 146(0)) on _OPTION
96: shift/reduce conflict (shift 39(0), red'n 146(0)) on _TRUE
96: shift/reduce conflict (shift 40(0), red'n 146(0)) on _FALSE
96: shift/reduce conflict (shift 41(0), red'n 146(0)) on _INF
96: shift/reduce conflict (shift 42(0), red'n 146(0)) on _NAN
96: shift/reduce conflict (shift 43(0), red'n 146(0)) on _REPEATED
96: shift/reduce conflict (shift 44(0), red'n 146(0)) on _OPTIONAL
96: shift/reduce conflict (shift 45(0), red'n 146(0)) on _REQUIRED
96: shift/reduce conflict (shift 46(0), red'n 146(0)) on _DOUBLE
96: shift/reduce conflict (shift 47(0), red'n 146(0)) on _FLOAT
96: shift/reduce conflict (shift 48(0), red'n 146(0)) on _INT32
96: shift/reduce conflict (shift 49(0), red'n 146(0)) on _INT64
96: shift/reduce conflict (shift 50(0), red'n 146(0)) on _UINT32
96: shift/reduce conflict (shift 51(0), red'n 146(0)) on _UINT64
96: shift/reduce conflict (shift 52(0), red'n 146(0)) on _SINT32
96: shift/reduce conflict (shift 53(0), red'n 146(0)) on _SINT64
96: shift/reduce conflict (shift 54(0), red'n 146(0)) on _FIXED32
96: shift/reduce conflict (shift 55(0), red'n 146(0)) on _FIXED64
96: shift/reduce conflict (shift 56(0), red'n 146(0)) on _SFIXED32
96: shift/reduce conflict (shift 57(0), red'n 146(0)) on _SFIXED64
96: shift/reduce conflict (shift 58(0), red'n 146(0)) on _BOOL
96: shift/reduce conflict (shift 59(0), red'n 146(0)) on _STRING
96: shift/reduce conflict (shift 60(0), red'n 146(0)) on _BYTES
96: shift/reduce conflict (shift 61(0), red'n 146(0)) on _GROUP
96: shift/reduce conflict (shift 62(0), red'n 146(0)) on _ONEOF
96: shift/reduce conflict (shift 63(0), red'n 146(0)) on _MAP
96: shift/reduce conflict (shift 64(0), red'n 146(0)) on _EXTENSIONS
96: shift/reduce conflict (shift 65(0), red'n 146(0)) on _TO
96: shift/reduce conflict (shift 66(0), red'n 146(0)) on _MAX
96: shift/reduce conflict (shift 153(0), red'n 146(0)) on _RESERVED
96: shift/reduce conflict (shift 68(0), red'n 146(0)) on _ENUM
96: shift/reduce conflict (shift 69(0), red'n 146(0)) on _MESSAGE
96: shift/reduce conflict (shift 70(0), red'n 146(0)) on _EXTEND
96: shift/reduce conflict (shift 71(0), red'n 146(0)) on _SERVICE
96: shift/reduce conflict (shift 72(0), red'n 146(0)) on _RPC
96: shift/reduce conflict (shift 73(0), red'n 146(0)) on _STREAM
96: shift/reduce conflict (shift 74(0), red'n 146(0)) on _RETURNS
96: shift/reduce conflict (shift 150(0), red'n 146(0)) on ';'
state 96
	enum:  _ENUM name '{'.enumDecls '}' 
	enumDecls: .    (146)
